Fix spacing

--- a/src/Homepage.scss
+++ b/src/Homepage.scss
@@ -65,7 +65,7 @@
 	margin-bottom: -2em;
 
 	h1 {
-		margin-top: 0;
+		margin-top: 1em;
 	}
 
 	p {
@@ -79,11 +79,8 @@
 }
 
 .sunflower {
-	//max-height: calc(100vh - 15em);
-	//height: 90vw;
-	width: 90vw !important;
-	max-width: 90vw !important;
-	height: 800px;
+	max-height: calc(100vh - 15em);
+	height: 90vw;
 
 	canvas {
 		touch-action: none;
